--- a/app/src/main/res/layout/activity_counsel.xml
+++ b/app/src/main/res/layout/activity_counsel.xml
@@ -41,50 +41,11 @@
         android:layout_marginTop="30dp"
         android:layout_marginRight="20dp">
 
-        <TextView
+        <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="name"
-            android:id="@+id/textView46"
-            android:textSize="50dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="e-mail"
-            android:id="@+id/textView47"
-            android:layout_marginTop="10dp"
-            android:textSize="50dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="call"
-            android:id="@+id/textView48"
-            android:layout_marginTop="10dp"
-            android:textSize="50dp" />
-
-        <TextView
-            android:id="@+id/textView49"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="กรุณากรอก"
-            android:padding="20dp"
-            android:textColor="#000000"
-            android:textSize="50dp"
-            android:background="#ffffff"
-            android:shadowColor="#FFFFFF"
-            android:shadowDx="3"
-            android:shadowDy="2"
-            android:shadowRadius="1" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:ems="10"
-            android:id="@+id/editText7"
-            android:text="วันที่" />
+            android:id="@+id/listView4"
+            android:layout_below="@+id/textView7" />
 
         <Button
             android:layout_width="wrap_content"
