--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -24,7 +24,7 @@
                     android:layout_height="200dp"
                     android:id="@+id/imageView6"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="90dp" />
+                    android:layout_marginTop="50dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -60,18 +60,50 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
-                <fragment
-                    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity"
-                    android:id="@+id/fragment2"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp" />
+                    android:layout_height="match_parent" >
 
-                <RatingBar
-                    android:id="@+id/ratingBar4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_horizontal" />
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/price1" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/open" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/add" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/trivel1" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -87,6 +119,12 @@
                         android:textColor="#ffffff" />
                 </LinearLayout>
 
+                <RatingBar
+                    android:id="@+id/ratingBar4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center_horizontal" />
+
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -101,61 +139,6 @@
                         android:textColor="#ffffff" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <Button
-                        android:id="@+id/button20"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="Tell"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <Button
-                        android:id="@+id/button21"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="Tavel"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <Button
-                        android:id="@+id/button22"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="Open-Exit"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <Button
-                        android:id="@+id/button23"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="price"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
@@ -182,29 +165,5 @@
                 android:shadowRadius="1" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout18"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:background="#80caa6"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:layout_marginTop="48dp" >
-
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text"
-                android:textColor="@color/text"
-                android:textSize="@dimen/h2"
-                android:shadowColor="#333333"
-                android:shadowDx="3"
-                android:shadowDy="2"
-                android:shadowRadius="1"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp" />
-        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
