--- a/app/src/main/res/layout/activity_interdis.xml
+++ b/app/src/main/res/layout/activity_interdis.xml
@@ -25,7 +25,7 @@
                     android:layout_height="200dp"
                     android:id="@+id/imageView10"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="90dp" />
+                    android:layout_marginTop="50dp" />
 
                 <TextView
                     android:id="@+id/textView42"
@@ -56,32 +56,15 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
-                <fragment
-                    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity"
-                    android:id="@+id/fragment5"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-
-                <RatingBar
-                    android:id="@+id/ratingBar8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_horizontal" />
-
                 <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
+                    android:layout_height="match_parent" >
 
-                    <Button
-                        android:id="@+id/button49"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Range"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/open2" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -89,14 +72,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <Button
+                    <EditText
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:text="ที่พัก"
-                        android:id="@+id/button50"
-                        android:textSize="20dp"
-                        android:background="@drawable/button_shape2"
-                        android:textColor="#ffffff" />
+                        android:id="@+id/call" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -104,15 +83,34 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <Button
+                    <EditText
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:text="ร้านอาหาร"
-                        android:id="@+id/button51"
-                        android:textSize="20dp"
-                        android:background="@drawable/button_shape3"
-                        android:textColor="#ffffff" />
+                        android:id="@+id/Email" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/price2" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/trivel2" />
+                </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
 
@@ -139,29 +137,5 @@
                 android:shadowRadius="1" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout38"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:background="#80caa6"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:layout_marginTop="48dp" >
-
-            <TextView
-                android:id="@+id/textView45"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text"
-                android:textColor="@color/text"
-                android:textSize="@dimen/h2"
-                android:shadowColor="#333333"
-                android:shadowDx="3"
-                android:shadowDy="2"
-                android:shadowRadius="1"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp" />
-        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
