--- a/app/src/main/res/layout/activity_reporttitel.xml
+++ b/app/src/main/res/layout/activity_reporttitel.xml
@@ -60,24 +60,11 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
-                <RatingBar
-                    android:id="@+id/ratingBar5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_horizontal" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
 
-                    <Button
-                        android:id="@+id/button33"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Range"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -85,13 +72,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <Button
-                        android:id="@+id/button34"
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <EditText
                         android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="counsel"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
+                        android:layout_height="wrap_content"
+                        android:id="@+id/fromnew" />
                 </LinearLayout>
 
             </LinearLayout>
