--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -25,7 +25,7 @@
                     android:layout_height="200dp"
                     android:id="@+id/imageView5"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="90dp" />
+                    android:layout_marginTop="50dp" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -63,32 +63,71 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
-                <fragment
-                    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity"
-                    android:id="@+id/fragment"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-
-                <RatingBar
-                    android:id="@+id/ratingBar3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_horizontal" />
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/address2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
+                    android:text="New Text"
+                    android:padding="20dp"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
+                    android:background="#ffffff"
+                    android:shadowColor="#FFFFFF"
+                    android:shadowDx="3"
+                    android:shadowDy="2"
+                    android:shadowRadius="1"
+                    android:layout_weight="7.21" />
 
-                    <Button
-                        android:id="@+id/button12"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Range"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
+                <TextView
+                    android:id="@+id/travel3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:padding="20dp"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
+                    android:background="#ffffff"
+                    android:shadowColor="#FFFFFF"
+                    android:shadowDx="3"
+                    android:shadowDy="2"
+                    android:shadowRadius="1"
+                    android:layout_weight="7.21" />
 
+                <TextView
+                    android:id="@+id/price2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:padding="20dp"
+                    android:textColor="#000000"
+                    android:textSize="16dp"
+                    android:background="#ffffff"
+                    android:shadowColor="#FFFFFF"
+                    android:shadowDx="3"
+                    android:shadowDy="2"
+                    android:shadowRadius="1"
+                    android:layout_weight="7.21" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText11" />
+                </LinearLayout>//เบอร์โทรศัพท์
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText12" />//อีเมล
                 </LinearLayout>
 
                 <LinearLayout
@@ -96,14 +135,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <Button
-                        android:id="@+id/button13"
+                    <EditText
                         android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="counsel"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText14" />//ที่อยู่
                 </LinearLayout>
 
                 <LinearLayout
@@ -111,55 +146,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <Button
-                        android:id="@+id/button14"
+                    <EditText
                         android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="Tell"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:id="@+id/button15"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="Tavel"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:id="@+id/button16"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="Open-Exit"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:id="@+id/button17"
-                        android:layout_width="fill_parent"
-                        android:layout_height="50dp"
-                        android:text="price"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText15" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -188,29 +178,5 @@
                 android:shadowRadius="1" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout16"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:background="#80caa6"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:layout_marginTop="48dp" >
-
-            <TextView
-                android:id="@+id/textView17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text"
-                android:textColor="@color/text"
-                android:textSize="@dimen/h2"
-                android:shadowColor="#333333"
-                android:shadowDx="3"
-                android:shadowDy="2"
-                android:shadowRadius="1"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp" />
-        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
