--- a/app/src/main/res/layout/activity_summerdis.xml
+++ b/app/src/main/res/layout/activity_summerdis.xml
@@ -56,31 +56,26 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
-                <fragment
-                    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity"
-                    android:id="@+id/fragment3"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp" />
-
-                <RatingBar
-                    android:id="@+id/ratingBar6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_horizontal" />
-
                 <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
+                    android:layout_height="match_parent" >
 
-                    <Button
-                        android:id="@+id/button39"
+                    <TextView
+                        android:id="@+id/textView17"
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Range"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
+                        android:layout_height="wrap_content"
+                        android:text="open"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -88,14 +83,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <Button
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="ที่พัก"
-                        android:id="@+id/button41"
-                        android:textSize="20dp"
-                        android:background="@drawable/button_shape2"
-                        android:textColor="#ffffff" />
+                        android:text="e-mail"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -103,14 +104,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <Button
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/textView23"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="ร้านอาหาร"
-                        android:id="@+id/button40"
-                        android:textSize="20dp"
-                        android:background="@drawable/button_shape3"
-                        android:textColor="#ffffff" />
+                        android:text="price4"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <TextView
+                        android:id="@+id/textView35"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="traval3"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -130,7 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="New Text"
+                android:text="SEASON"
                 android:textColor="@color/text"
                 android:textSize="@dimen/h1"
                 android:shadowColor="#333333"
@@ -150,10 +178,10 @@
             android:layout_marginTop="48dp" >
 
             <TextView
-                android:id="@+id/textView35"
+                android:id="@+id/nametour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="tourname"
                 android:textColor="@color/text"
                 android:textSize="@dimen/h2"
                 android:shadowColor="#333333"
