--- a/app/src/main/res/layout/activity_interdis.xml
+++ b/app/src/main/res/layout/activity_interdis.xml
@@ -61,10 +61,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/open2"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/open2" />
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -72,10 +82,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/call"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/call" />
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -83,10 +103,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/Email"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/Email" />
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -94,10 +125,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/price2"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/price2" />
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -105,10 +147,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/travel"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/trivel2" />
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
+
                 </LinearLayout>
 
             </LinearLayout>
