--- a/app/src/main/res/layout/activity_seasondis.xml
+++ b/app/src/main/res/layout/activity_seasondis.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <ScrollView
-            android:id="@+id/scrollView6"
+            android:id="@+id/scrollView5"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
@@ -23,12 +23,12 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:id="@+id/imageView9"
+                    android:id="@+id/imageView8"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="90dp" />
 
                 <TextView
-                    android:id="@+id/textView37"
+                    android:id="@+id/Description"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:text="Description:"
@@ -42,7 +42,7 @@
                     android:background="#00a2ff" />
 
                 <TextView
-                    android:id="@+id/textView38"
+                    android:id="@+id/newtext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="New Text"
@@ -62,7 +62,7 @@
                     android:layout_height="match_parent" >
 
                     <TextView
-                        android:id="@+id/textView39"
+                        android:id="@+id/open"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="open"
@@ -75,6 +75,7 @@
                         android:shadowDy="2"
                         android:shadowRadius="1"
                         android:layout_weight="7.21" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -83,10 +84,10 @@
                     android:layout_height="match_parent" >
 
                     <TextView
-                        android:id="@+id/textView40"
+                        android:id="@+id/emaill"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="e-mail"
+                        android:text="e-maill"
                         android:padding="20dp"
                         android:textColor="#000000"
                         android:textSize="16dp"
@@ -104,7 +105,7 @@
                     android:layout_height="match_parent" >
 
                     <TextView
-                        android:id="@+id/textView45"
+                        android:id="@+id/price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="price4"
@@ -125,7 +126,7 @@
                     android:layout_height="match_parent" >
 
                     <TextView
-                        android:id="@+id/textView46"
+                        android:id="@+id/traval"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="traval3"
@@ -139,11 +140,12 @@
                         android:shadowRadius="1"
                         android:layout_weight="7.21" />
                 </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
 
         <LinearLayout
-            android:id="@+id/linearLayout16"
+            android:id="@+id/linearLayout29"
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:layout_centerHorizontal="true"
@@ -152,7 +154,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView47"
+                android:id="@+id/season"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -166,7 +168,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout18"
+            android:id="@+id/linearLayout30"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
@@ -176,7 +178,7 @@
             android:layout_marginTop="48dp" >
 
             <TextView
-                android:id="@+id/textView48"
+                android:id="@+id/nametour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="tourname"
