--- a/app/src/main/res/layout/activity_counsel.xml
+++ b/app/src/main/res/layout/activity_counsel.xml
@@ -41,11 +41,13 @@
         android:layout_marginTop="30dp"
         android:layout_marginRight="20dp">
 
-        <ListView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listView4"
-            android:layout_below="@+id/textView7" />
+            android:inputType="textPersonName"
+            android:text="Name"
+            android:ems="10"
+            android:id="@+id/editText7" />
 
         <Button
             android:layout_width="wrap_content"
