--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -110,13 +110,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
 
-                    <Button
-                        android:id="@+id/button18"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:text="Range"
-                        android:background="@drawable/button_shape"
-                        android:textColor="#ffffff" />
                 </LinearLayout>
 
                 <RatingBar
@@ -124,6 +117,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:id="@+id/button18"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="Range"
+                    android:background="@drawable/button_shape"
+                    android:textColor="#ffffff" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -156,7 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="New Text"
+                android:text="RESTAURANT"
                 android:textColor="@color/text"
                 android:textSize="@dimen/h1"
                 android:shadowColor="#333333"
