--- a/app/src/main/res/layout/activity_manu.xml
+++ b/app/src/main/res/layout/activity_manu.xml
@@ -31,31 +31,38 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="130dp">
+        android:layout_marginBottom="100dp">
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="80dp"
-            android:text="สถานที่ท่องเที่ยว"
-            android:id="@+id/button8" />
+            android:text="NEW"
+            android:id="@+id/button8"
+            android:background="@drawable/button_shape1" />
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="80dp"
             android:text="สถานที่ท่องเที่ยวที่น่าสนใจ"
-            android:id="@+id/button9" />
+            android:id="@+id/button9"
+            android:background="@drawable/button_shape6"
+            android:layout_marginTop="10dp" />
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="80dp"
-            android:text="ท่องเที่ยวตามฤดูกาล"
-            android:id="@+id/button10" />
+            android:text="สถานที่ท่องเที่ยวตามฤดูกาล"
+            android:id="@+id/button10"
+            android:background="@drawable/button_shape4"
+            android:layout_marginTop="10dp" />
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="80dp"
             android:text="ข่าวสารการท่องเที่ยว"
-            android:id="@+id/button11" />
+            android:id="@+id/button11"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_shape7" />
     </LinearLayout>
 
 </LinearLayout>
