--- a/app/src/main/res/layout/activity_reporttitel.xml
+++ b/app/src/main/res/layout/activity_reporttitel.xml
@@ -46,7 +46,7 @@
                     android:background="#00a2ff" />
 
                 <TextView
-                    android:id="@+id/textView27"
+                    android:id="@+id/dis"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="New Text"
@@ -59,31 +59,6 @@
                     android:shadowDy="2"
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/fromnew" />
-                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
@@ -98,7 +73,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView28"
+                android:id="@+id/reporttitel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -122,7 +97,7 @@
             android:layout_marginTop="48dp" >
 
             <TextView
-                android:id="@+id/textView29"
+                android:id="@+id/report"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Report"
