--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -113,16 +113,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/editText11" />
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
                 </LinearLayout>//เบอร์โทรศัพท์
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="New Text"
+                        android:padding="20dp"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:background="#ffffff"
+                        android:shadowColor="#FFFFFF"
+                        android:shadowDx="3"
+                        android:shadowDy="2"
+                        android:shadowRadius="1"
+                        android:layout_weight="7.21" />
 
                     <EditText
                         android:layout_width="fill_parent"
