--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -63,46 +63,116 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView16"
+                        android:src="@drawable/zacall" />
+
+                    <TextView
+                        android:id="@+id/call1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/price1" />
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView17"
+                        android:src="@drawable/zaopen" />
+
+                    <TextView
+                        android:id="@+id/open1"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/open" />
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginTop="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView18"
+                        android:src="@drawable/zaemail" />
+
+                    <TextView
+                        android:id="@+id/email1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/add" />
+                        android:text="New Text"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView19"
+                        android:src="@drawable/zaprice" />
+
+                    <TextView
+                        android:id="@+id/price1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/trivel1" />
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView20"
+                        android:src="@drawable/zatravel" />
+
+                    <TextView
+                        android:id="@+id/tavel1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -112,17 +182,11 @@
 
                 </LinearLayout>
 
-                <RatingBar
-                    android:id="@+id/ratingBar4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center_horizontal" />
-
                 <Button
                     android:id="@+id/button18"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="Range"
+                    android:text="ร้านอาหารเพิ่มเติม"
                     android:background="@drawable/button_shape"
                     android:textColor="#ffffff" />
 
