--- a/app/src/main/res/layout/activity_interdis.xml
+++ b/app/src/main/res/layout/activity_interdis.xml
@@ -59,113 +59,123 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <TextView
-                        android:id="@+id/open2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="New Text"
-                        android:padding="20dp"
-                        android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageView12" />
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/zacall"
+                        android:src="@drawable/zacall"
+                     />
 
                     <TextView
                         android:id="@+id/call"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView13"
+                        android:src="@drawable/zaopen" />
+
+                    <TextView
+                        android:id="@+id/open2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginTop="10dp"
+                       />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView12"
+                        android:src="@drawable/zaemail" />
 
                     <TextView
                         android:id="@+id/Email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:padding="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="20sp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginTop="10dp"
+                     />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView14"
+                        android:src="@drawable/zaprice" />
 
                     <TextView
                         android:id="@+id/price2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView15"
+                        android:src="@drawable/zatravel"
+                        />
 
                     <TextView
                         android:id="@+id/travel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp"/>
 
                 </LinearLayout>
 
