--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -63,119 +63,122 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
-                <TextView
-                    android:id="@+id/address2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="New Text"
-                    android:padding="20dp"
-                    android:textColor="#000000"
-                    android:textSize="16dp"
-                    android:background="#ffffff"
-                    android:shadowColor="#FFFFFF"
-                    android:shadowDx="3"
-                    android:shadowDy="2"
-                    android:shadowRadius="1"
-                    android:layout_weight="7.21" />
-
-                <TextView
-                    android:id="@+id/travel3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="New Text"
-                    android:padding="20dp"
-                    android:textColor="#000000"
-                    android:textSize="16dp"
-                    android:background="#ffffff"
-                    android:shadowColor="#FFFFFF"
-                    android:shadowDx="3"
-                    android:shadowDy="2"
-                    android:shadowRadius="1"
-                    android:layout_weight="7.21" />
-
-                <TextView
-                    android:id="@+id/price2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="New Text"
-                    android:padding="20dp"
-                    android:textColor="#000000"
-                    android:textSize="16dp"
-                    android:background="#ffffff"
-                    android:shadowColor="#FFFFFF"
-                    android:shadowDx="3"
-                    android:shadowDy="2"
-                    android:shadowRadius="1"
-                    android:layout_weight="7.21" />
-
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView21"
+                        android:src="@drawable/zacall" />
 
                     <TextView
-                        android:id="@+id/textView17"
+                        android:id="@+id/call2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
-                </LinearLayout>//เบอร์โทรศัพท์
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20dp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView22"
+                        android:src="@drawable/zaopen" />
 
                     <TextView
-                        android:id="@+id/textView21"
+                        android:id="@+id/open3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginTop="10dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView23"
+                        android:src="@drawable/zaemail" />
+
+                    <TextView
+                        android:id="@+id/email2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="New Text"
-                        android:padding="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="20sp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
-
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editText12" />//อีเมล
+                        android:layout_marginTop="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView24"
+                        android:src="@drawable/zaprice" />
+
+                    <TextView
+                        android:id="@+id/price3"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/editText14" />//ที่อยู่
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp" >
 
-                    <EditText
-                        android:layout_width="fill_parent"
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView25"
+                        android:src="@drawable/zatravel" />
+
+                    <TextView
+                        android:id="@+id/traval2"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/editText15" />
+                        android:text="New Text"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp" />
                 </LinearLayout>
+
+                //เบอร์โทรศัพท์
 
             </LinearLayout>
         </ScrollView>
