--- a/app/src/main/res/layout/activity_seasondis.xml
+++ b/app/src/main/res/layout/activity_seasondis.xml
@@ -59,86 +59,94 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView26"
+                        android:src="@drawable/zaopen" />
 
                     <TextView
                         android:id="@+id/open"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="open"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20dp"/>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView27"
+                        android:src="@drawable/zaemail" />
 
                     <TextView
                         android:id="@+id/emaill"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="e-maill"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20dp"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView28"
+                        android:src="@drawable/zaprice" />
 
                     <TextView
                         android:id="@+id/price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="price4"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20dp"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/imageView29"
+                        android:src="@drawable/zatravel" />
 
                     <TextView
                         android:id="@+id/traval"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="traval3"
-                        android:padding="20dp"
                         android:textColor="#000000"
-                        android:textSize="16dp"
-                        android:background="#ffffff"
-                        android:shadowColor="#FFFFFF"
-                        android:shadowDx="3"
-                        android:shadowDy="2"
-                        android:shadowRadius="1"
-                        android:layout_weight="7.21" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20dp"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -147,11 +155,11 @@
         <LinearLayout
             android:id="@+id/linearLayout29"
             android:layout_width="match_parent"
-            android:layout_height="47dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="#9d00ff"
             android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/season"
@@ -164,18 +172,19 @@
                 android:shadowColor="#333333"
                 android:shadowDx="3"
                 android:shadowDy="2"
-                android:shadowRadius="1" />
+                android:shadowRadius="1"
+                android:layout_marginBottom="5dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout30"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="#80caa6"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:layout_marginTop="48dp" >
+            android:layout_marginTop="46dp" >
 
             <TextView
                 android:id="@+id/nametour"
@@ -187,9 +196,10 @@
                 android:shadowColor="#333333"
                 android:shadowDx="3"
                 android:shadowDy="2"
+                android:layout_margin="10dp"
                 android:shadowRadius="1"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"/>
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
