--- a/app/src/main/res/layout/activity_seasonsummer.xml
+++ b/app/src/main/res/layout/activity_seasonsummer.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/beerza">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/linearLayout27"
@@ -29,29 +28,129 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout28"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="228dp"
-        android:layout_centerHorizontal="true"
-        android:background="#70ffffff"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="130dp" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" >
 
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            android:text="1111"
-            android:id="@+id/button37" />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView36"
+            android:src="@drawable/zamaiton" />
 
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            android:text="22222"
-            android:id="@+id/button38" />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView37"
+            android:src="@drawable/zalaywak" />
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="เกาะไม้ท่อน"
+            android:id="@+id/button13"
+            android:background="@drawable/button_shape10"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="ทะเลแหวก"
+            android:id="@+id/button14"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_shape11" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" >
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView40"
+            android:src="@drawable/zalepai" />
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView41"
+            android:src="@drawable/zatachai" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="เกาะหลีเป๊ะ"
+            android:id="@+id/button17"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_shape11" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="เกาะตาชัย"
+            android:id="@+id/button20"
+            android:background="@drawable/button_shape10"
+            android:textColor="#ffffff" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" >
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView38"
+            android:src="@drawable/zasimiran" />
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:id="@+id/imageView39"
+            android:src="@drawable/zatalutao" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="หมู่เกาะสิมิลัน"
+            android:id="@+id/button37"
+            android:background="@drawable/button_shape10"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="อุทยานแห่งชาติตะรุเตา"
+            android:id="@+id/button38"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_shape11" />
+    </LinearLayout>
+
 </LinearLayout>
