--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -67,7 +67,7 @@
                 android:layout_height="200dp"
 
                 tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="10dp" />
 
 
             />
@@ -170,6 +170,7 @@
             android:shadowColor="#333333"
             android:shadowDx="3"
             android:shadowDy="2"
+            android:layout_margin="10dp"
             android:shadowRadius="1"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp" />
