--- a/app/src/main/res/layout/activity_reporttitel.xml
+++ b/app/src/main/res/layout/activity_reporttitel.xml
@@ -66,12 +66,13 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="Form"
-                    android:textColor="@color/text"
-                    android:textSize="@dimen/h1"
+                    android:textSize="@dimen/h2"
                     android:shadowColor="#333333"
                     android:shadowDx="3"
                     android:shadowDy="2"
-                    android:shadowRadius="1" />
+                    android:layout_margin="10dp"
+                    android:shadowRadius="1"
+                    android:layout_marginTop="5dp"  />
 
             </LinearLayout>
         </ScrollView>
