--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -72,29 +72,6 @@
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:id="@+id/imageView21"
-                        android:src="@drawable/zacall" />
-
-                    <TextView
-                        android:id="@+id/call2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="New Text"
-                        android:textColor="#000000"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="20dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp" >
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
                         android:id="@+id/imageView22"
                         android:src="@drawable/zaopen" />
 
@@ -176,7 +153,17 @@
                         android:layout_marginTop="10dp"
                         android:textSize="20sp"
                         android:layout_marginLeft="10dp" />
+
                 </LinearLayout>
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ร้านอาหารเพิ่มเติม"
+                    android:id="@+id/button22"
+                    android:textSize="20dp"
+                    android:background="@drawable/button_shape3"
+                    android:textColor="#ffffff" />
 
                 //เบอร์โทรศัพท์
 
