--- a/app/src/main/res/layout/activity_seasondis.xml
+++ b/app/src/main/res/layout/activity_seasondis.xml
@@ -147,6 +147,21 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:textSize="20dp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="counsel"
+                        android:id="@+id/button33"
+                        android:background="@drawable/button_shape1"
+                        android:layout_marginTop="10dp" />
                 </LinearLayout>
 
             </LinearLayout>
